--- a/polybar/modules.conf
+++ b/polybar/modules.conf
@@ -264,21 +264,13 @@ bar-progress-empty-foreground = #44
 type = internal/network
 interface = enp4s0
 
-
 interval = 1.0
 ping-interval = 10
 
-format-connected = <ramp-signal> <label-connected>
-label-connected = %local_ip%    %downspeed%    %upspeed%
+format-connected = <label-connected>
+label-connected =  %local_ip%   %downspeed%   %upspeed%
 label-disconnected =    not connected
 label-disconnected-foreground = #66
-
-ramp-signal-0 = 😱
-ramp-signal-1 = 😠
-ramp-signal-2 = 😒
-ramp-signal-3 = 😊
-ramp-signal-4 = 😃
-ramp-signal-5 = 😈
 
 animation-packetloss-0 = 
 animation-packetloss-0-foreground = #ffa64c
@@ -305,7 +297,7 @@ ramp-volume-3 = 
 type = internal/fs
 interval = 25
 mount-0 = /
-label-mounted =  %mountpoint%: %percentage_used%%
+label-mounted =   %mountpoint%: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = #66
 
@@ -325,7 +317,7 @@ date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-warn-temperature = 80
+warn-temperature = 60
 
 format = <ramp> <label>
 ;format-underline = #f50a4d
@@ -335,10 +327,9 @@ format-warn = <ramp> <label-warn>
 label = %temperature-c%
 label-warn = HOT! %temperature-c%
 label-warn-foreground = #f00
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 ramp-foreground = #66
 
 [module/spotify]
