--- a/polybar/master.conf
+++ b/polybar/master.conf
@@ -9,7 +9,7 @@ fixed-center = true
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
-background = #263238
+background = #101010
 foreground = #DFDFDF
 
 line-color = #1f1f1f
@@ -21,8 +21,8 @@ module-margin-left = 0
 module-margin-right = 6
 
 font-0 = fontawesome:pixelsize=10
-font-1 = Iosevka Nerd Font:pixelsize=11;3
-font-2 = Material Icons:size=10;2
+font-1 = Iosevka Nerd Font:pixelsize=11
+font-2 = Material Icons:size=10
 
 tray-position = right
 tray-scale = 1.0
