--- a/i3/config
+++ b/i3/config
@@ -13,13 +13,13 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 4
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal #i3-sensible-terminal
+bindsym $mod+Return exec terminator #i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -64,7 +64,7 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle all
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -153,9 +153,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-
-
 bindsym $mod+control+l exec i3lock-fancy -p -g
+
+#Borders
+default_border pixel 1
+hide_edge_borders both
 
 # class                 border  bground text    indicator child_border
 client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
@@ -209,7 +211,7 @@ set $statussig SIGUSR1
 
 # exec --no-startup-id volumeicon
 #bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
-exec --no-startup-id pulseaudio
+# exec --no-startup-id pulseaudio
 #exec --no-startup-id pa-applet
 # bindsym $mod+Ctrl+m exec pavucontrol
 
@@ -224,7 +226,7 @@ set $volumestep 5
 # Card number to control.
 #   If not specified, i3-volume will let `amixer` use a default.
 #   List cards: aplay -l
-set $alsacard 1
+# set $alsacard 1
 
 
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -237,13 +239,12 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id $volumepath/volume -an -t $sta
 bindsym XF86AudioLowerVolume exec --no-startup-id $volumepath/volume -an -t $statuscmd -u $statussig down $volumestep
 bindsym XF86AudioMute        exec --no-startup-id $volumepath/volume -an -t $statuscmd -u $statussig mute
 
-### Logi mouse setup
-exec xinput set-prop 10 336 1 #natural scrolling
-exec xinput set-prop 10 200 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 2 #pointer speed by half
-
 # Moving workspaces between screens 
 bindsym $mod+p move workspace to output right
 
-# Dual monitor setup
+# Wallpaper setup
+exec --no-startup-id nitrogen --set-zoom-fill --random --head=0 /home/daw/Images/wallpapers
 
-exec --no-startup-id xrandr --output HDMI-1 --rotate right
+### Logi mouse setup
+exec --no-startup-id xinput set-prop 10 292 1 #natural scrolling
+exec --no-startup-id xinput set-prop 10 157 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 2.5 #pointer speed by half and a half
