Transparent background with picom

--- a/i3/config
+++ b/i3/config
@@ -245,6 +245,9 @@ bindsym $mod+p move workspace to output right
 # Wallpaper setup
 exec --no-startup-id nitrogen --set-zoom-fill --random --head=0 /home/daw/Images/wallpapers
 
+# Transparent background
+exec --no-startup-id picom -CGb
+
 ### Logi mouse setup
 exec --no-startup-id xinput set-prop 10 292 1 #natural scrolling
 exec --no-startup-id xinput set-prop 10 157 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 2.5 #pointer speed by half and a half
