--- a/polybar/modules.conf
+++ b/polybar/modules.conf
@@ -207,12 +207,14 @@ click-left = ~/.config/rofi/launchers/type-1/launcher.sh
 click-right = launcher_t1
 
 [module/volume]
-type = custom/text
-
-content = 
-
-click-left = ~/.config/rofi/applets/bin/volume.sh
-click-right = volume_t1
+type = custom/script
+tail = true
+label = %output%
+exec = ~/.config/i3/volume listen "%i %v\n"
+scroll-up = ~/.config/i3/volume up
+scroll-down = ~/.config/i3/volume down
+click-left = ~/.config/i3/volume mute
+click-right = exec pavucontrol &
 
 [module/memory]
 type = internal/memory
@@ -277,21 +279,6 @@ animation-packetloss-0-foreground = #ffa64c
 animation-packetloss-1 = 
 animation-packetloss-1-foreground = ${bar/top.foreground}
 animation-packetloss-framerate = 500
-
-
-[module/alsa]
-type = internal/alsa
-master-soundcard = default
-master-mixer = Master
-
-format-volume = <ramp-volume> <label-volume>
-label-muted =   muted
-label-muted-foreground = #66
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
 
 [module/filesystem]
 type = internal/fs
