Remove arrow keys navigation

--- a/i3/config
+++ b/i3/config
@@ -19,7 +19,7 @@ font pango:DejaVu Sans Mono 4
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec terminator #i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id terminator #i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -29,31 +29,19 @@ bindsym $mod+space exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher
 bindsym $mod+x exec --no-startup-id ~/.config/rofi/powermenu/type-2/powermenu.sh
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+g split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -125,26 +113,20 @@ assign [title="Spotify"] $ws8
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec --no-startup-id "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        # Pressing h will shrink the window’s width.
+        # Pressing k will grow the window’s width.
+        # Pressing k will shrink the window’s height.
+        # Pressing j will grow the window’s height.
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -153,7 +135,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bindsym $mod+control+l exec i3lock-fancy -p -g
+bindsym $mod+control+l exec --no-startup-id i3lock-fancy -p -g
 
 #Borders
 default_border pixel 1
@@ -184,11 +166,11 @@ client.background       #F8F8F2
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 #Custom binds
-bindsym $mod+Shift+f exec firefox
-bindsym $mod+Shift+c exec code
-bindsym $mod+Shift+s exec spotify
+bindsym $mod+Shift+f exec --no-startup-id firefox
+bindsym $mod+Shift+c exec --no-startup-id code
+bindsym $mod+Shift+s exec --no-startup-id spotify
 
-bindsym --release $mod+Print exec gnome-screenshot -a
+bindsym --release $mod+Print exec --no-startup-id gnome-screenshot -a
 
 # Command for the status line
 #   ie: i3blocks, i3status
@@ -201,10 +183,10 @@ set $statussig SIGUSR1
 
 ## Volume control
 
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioPause exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioPause exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Review the lines below and append to ~/.config/i3/config
 
