Polybar: update monitor id and fix tray conf
fix: Monitor ID

--- a/polybar/modules.conf
+++ b/polybar/modules.conf
@@ -210,7 +210,7 @@ click-right = launcher_t1
 type = custom/script
 tail = true
 label = %output%
-exec = ~/.config/i3/volume listen "%i %v\n"
+exec = ~/.config/i3/volume listen "%i %v\\n"
 scroll-up = ~/.config/i3/volume up
 scroll-down = ~/.config/i3/volume down
 click-left = ~/.config/i3/volume mute
@@ -305,6 +305,7 @@ date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
 
 format = <ramp> <label>
 ;format-underline = #f50a4d
