--- a/i3status/config
+++ b/i3status/config
@@ -17,55 +17,54 @@ order += "ethernet _first_"
 order += "cpu_usage"
 order += "memory"
 order += "disk /"
-order += "battery 1"
+order += "battery all"
 order += "volume master"
 order += "tztime local"
 
 volume master {
-        format = "|  %volume"
-        format_muted = "|  muted (%volume)"
+        format = "󰕾 %volume"
+        format_muted = "󰝟    "
         device = "default"
         mixer = "Master"
         mixer_idx = 0
 }
 
 wireless _first_ {
-        format_up = "| ᯤ (%quality at %essid) %ip"
-        format_down = "| ᯤ down"
+        format_up = "󰖩 (%quality at %essid) %ip"
+        format_down = "󰖪"
 }
 
 cpu_usage {
-        format = "|  %usage"
+        format = " %usage"
 
 }
 
 ethernet _first_ {
-        format_up = "|  %ip (%speed)"
-        format_down = "|  down"
+        format_up = " %ip (%speed)"
+        format_down = " down"
 }
 
-battery 1 {
-        format = "|  %status %percentage %remaining %emptytime"
+battery all {
+        format = "%status %percentage %remaining"
         format_down = "No battery"
-        status_chr = ""
-        status_bat = "BAT"
-        status_unk = "? UNK"
-        status_full = "FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
+        status_chr = "󰂄"
+        status_bat = "󰁾"
+        status_unk = ""
+        status_full = "󰁹"
         low_threshold = 20
         last_full_capacity = true
 }
 
 disk "/" {
-        format = "| 🖴 %avail"
+        format = " %avail"
 }
 
 memory {
-        format = "|  %used/%available"
+        format = " %used/%available"
         threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+        format_degraded = " < %available"
 }
 
 tztime local {
-        format = "|  %H:%M:%S 🚀"
+        format = "󱑂 %H:%M:%S 🚀"
 }
